@@ -34,6 +34,8 @@ AM_INIT_AUTOMAKE([dist-bzip2])
 
 AM_MAINTAINER_MODE
 
+CFLAGS="$CFLAGS -Wall -pedantic"
+
 # Checks for programs.
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
